// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses 
     totalling 
    $400.00
  </h1>
</div>
`;

exports[`should render multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses 
     totalling 
    $10,023.00
  </h1>
</div>
`;
